[package]
name = "framslov-melvinj-game"
version = "0.1.0"
authors = ["Filip Ramslöv <framslov@kth.se>, Melvin Jnånting <melvinj@kth.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5"
rand = "0.7"
libloading = "0.6.6"